--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <title>Documents</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <video autoplay loop muted src="./video.mp4"></video>
                 <div id="overlay">
                     <div id="over1">
-                        <h1>Hilltop tales <br>with my tribe</h1>
+                        <h1>Hilltop tales <br>with my tribes</h1>
                         <h2>01</h2>
                     </div>
                     <div id="over2">
